Fix menu overlap issues and mobile button styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3141,9 +3141,9 @@
 			}
 
 				#banner .inner {
-					background: none;
+					/* background: none; */
 					display: block;
-					padding: 0 1.5em;
+					/* padding: 0 1.5em; */
 				}
 
 					#banner .inner header h2 {
